--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
         <div class="column-12">
           <img src="http://www.esri.com/~/media/Images/Content/homepage/features/uc15-tile.jpg" alt="">
-          <h2 class=""><a href="#">UC Early Birds Get the Perks</a></h2>
-          <p>Esri UC | July 20 – 24, 2015</p>
+          <h2 class=""><a href="vtrans-rail.github.io/crossing-inspection/">Crossing Inspection App</a></h2>
+          <p>VTrans Rail Section | January 26, 2016</p>
         </div>
 
         <div class="column-12">
