--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
----
-title: Homepage Sample
-description: Sample homepage layout using calcite-web
-css:
-  - homepage
----
+<!DOCTYPE html>
+<!--[if lt IE 9]>  <html class="ie lt-ie9 ie8"> <![endif]-->
+<!--[if IE 9]>     <html class="ie ie9"> <![endif]-->
+<!--[if !IE]><!--> <html> <!--<![endif]-->
+  <head>
+
+    <!-- Set encoding -->
+    <meta charset="utf-8">
+
+    <!-- Always force latest IE rendering engine or request Chrome Frame -->
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+
+    <!-- Use title from page frontmatter -->
+    <title>Homepage Sample</title>
+
+    <!-- Link to favicon -->
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico">
+
+    <!-- stylesheets -->
+
+      <link rel="stylesheet" href="node_modules\calcite-web\dist\css\calcite-web.css">
+
+    <!--[if lt IE 9]>
+      <script src="../../assets/js/libs/selectivizr-min.js"></script>
+      <script src="../../assets/js/libs/html5shiv.js"></script>
+    <![endif]-->
+
+    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+
+  </head>
+  <body>
+
 
 <header class="top-nav">
   <div class="grid-container">
@@ -124,3 +151,7 @@ css:
     </div>
   </div>
 </div>
+
+<script src="node_modules\calcite-web\dist\js\calcite-web.js"></script>
+<script src="node_modules\calcite-web\dist\js\all.js"></script>
+</body>
