replace carousel with hero

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- stylesheets -->
 
       <link rel="stylesheet" href="node_modules\calcite-web\dist\css\calcite-web.css">
+      
+      <!-- Style overrides -->
+      <link rel="stylesheet" href="\css\style.css">
 
     <!--[if lt IE 9]>
       <script src="../../assets/js/libs/selectivizr-min.js"></script>
@@ -49,37 +52,23 @@
   </div>
 </header>
 
-<section class="carousel js-carousel fade-in">
-
-  <div class="carousel-slides text-white">
-    <div class="carousel-slide">
-      <div class="grid-container slide-fade-in">
-        <div class="column-7">
-          <h1 class="leader-5 font-size-8">It’s Here!</h1>
-          <p>Create, share, and use maps on any device, anywhere, with ArcGIS 10.3 →</p>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-slide">
-      <div class="grid-container slide-fade-in">
-        <div class="column-12">
-          <h2 class="trailer-0 leader-5 font-size-8">ArcGIS Online</h2>
-          <h2 class="leader-half text-green font-size-8">3D Scene Viewer</h2>
-          <p>View, create and share 3D scenes in a browser →</p>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-slide">
-      <div class="grid-container slide-fade-in">
-        <div class="column-7">
-          <h1 class="trailer-0 leader-3 font-size-8">Geodesign</h1>
-          <h1 class="leader-0 text-yellow font-size-8">Summit</h1>
-          <p>Where collaboration and technology combine to achieve new clarity in design.<br>
-          January 22-23, 2015 | Redlands, CA →</p>
-        </div>
-      </div>
+<header class="sub-nav" role="banner">
+  <div class="grid-container">
+    <div class="column-24">
+      <nav class="breadcrumbs link-white leader-1">
+        <a href="#" class="crumb">Heros</a>
+        <a href="#" class="crumb">Animated</a>
+        <a href="#" class="crumb is-active">Adventure Time</a>
+      </nav>
+      <h1 class="sub-nav-title text-white leader-3">Heros</h1>
+      <p class="trailer-4 text-white">Don' forget Breakfast Princess, Emerald Princess, Engagement Ring Princess, Flame Princess, Ghost Princess, Hot Dog Princess, Lumpy Space Princess, Muscle Princess, Princess Bubblegum, Raggedy Princess, Skeleton Princess, Slime Princess, Turtle Princess, Wildberry Princess, Bee Princess, Bounce House Princess, Cotton Candy Princess, Crab Princess, Frozen Yogurt Princess, Elbow Princess, Embryo Princess, Gridface Princess, Jungle Princess, Laurel Princess, Lizard Princess, Old Lady Princess, Peanut Princess, Princess Beautiful, Princess Monster Wife, Princess Princess Princess, Purple Princess, Space Angel Princess, Strudel Princess, and Toast Princess.</p>
+      <nav class="sub-nav-list" role="navigation" aria-labelledby="subnav">
+        <a class="sub-nav-link is-active" href="#">Jake the Dog</a>
+        <a class="sub-nav-link" href="#">Finn the Human</a>
+      </nav>
     </div>
   </div>
+</header>
 
   <div class="grid-container">
     <nav class="banner-dots column-24">
@@ -153,5 +142,5 @@
 </div>
 
 <script src="node_modules\calcite-web\dist\js\calcite-web.js"></script>
-<script src="node_modules\calcite-web\dist\js\all.js"></script>
+<script src="node_modules\calcite-web\docs\source\assets\js\all.js"></script>
 </body>
