--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
 
     <!-- Use title from page frontmatter -->
-    <title>Homepage Sample</title>
+    <title>VTrans Rail Apps</title>
 
     <!-- Link to favicon -->
     <link rel="shortcut icon" href="../../assets/img/favicon.ico">
@@ -20,7 +20,7 @@
     <!-- stylesheets -->
 
       <link rel="stylesheet" href="node_modules\calcite-web\dist\css\calcite-web.css">
-      
+
       <!-- Style overrides -->
       <link rel="stylesheet" href="\css\style.css">
 
@@ -37,18 +37,18 @@
 
 <header class="top-nav">
   <div class="grid-container">
-    <div class="esri-logo esri-logo-condensed leader-half left"></div>
+    <div class="vtrans-logo leader-half left"></div>
     <nav class="top-nav-list pre-1">
-      <a href="#" class="top-nav-link">Industries</a>
-      <a href="#" class="top-nav-link">Products</a>
-      <a href="#" class="top-nav-link">Support & Services </a>
-      <a href="#" class="top-nav-link">About</a>
-      <a href="#" class="top-nav-link">Community</a>
+      <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
+      <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
+      <a href="http://vtransmap01.aot.state.vt.us/" class="top-nav-link" target="_blank">VTransMap</a>
+      <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="top-nav-link" target="_blank">VT 511</a>
+      <!-- <a href="#" class="top-nav-link">Community</a> -->
     </nav>
-    <nav class="sign-in right">
+    <!-- <nav class="sign-in right">
       <a href="#" class="btn btn-small btn-clear">Sign Up</a>
       <a href="#" class="btn btn-small btn-transparent">Sign In</a>
-    </nav>
+    </nav> -->
   </div>
 </header>
 
@@ -56,16 +56,18 @@
   <div class="grid-container">
     <div class="column-24">
       <nav class="breadcrumbs link-white leader-1">
-        <a href="#" class="crumb">Heros</a>
-        <a href="#" class="crumb">Animated</a>
-        <a href="#" class="crumb is-active">Adventure Time</a>
+        <a href="http://vtrans.vermont.gov" class="crumb">VTrans</a>
+        <a href="http://rail.vermont.gov" class="crumb">Rail</a>
+        <a href="http://apps.rail.vermont.gov" class="crumb is-active">Apps</a>
       </nav>
-      <h1 class="sub-nav-title text-white leader-3">Heros</h1>
-      <p class="trailer-4 text-white">Don' forget Breakfast Princess, Emerald Princess, Engagement Ring Princess, Flame Princess, Ghost Princess, Hot Dog Princess, Lumpy Space Princess, Muscle Princess, Princess Bubblegum, Raggedy Princess, Skeleton Princess, Slime Princess, Turtle Princess, Wildberry Princess, Bee Princess, Bounce House Princess, Cotton Candy Princess, Crab Princess, Frozen Yogurt Princess, Elbow Princess, Embryo Princess, Gridface Princess, Jungle Princess, Laurel Princess, Lizard Princess, Old Lady Princess, Peanut Princess, Princess Beautiful, Princess Monster Wife, Princess Princess Princess, Purple Princess, Space Angel Princess, Strudel Princess, and Toast Princess.</p>
-      <nav class="sub-nav-list" role="navigation" aria-labelledby="subnav">
+      <h1 class="sub-nav-title text-white leader-3">Rail App Portal</h1>
+      <p class="trailer-4 text-white">
+        Welcome to the VTrans rail app portal.
+      </p>
+      <!-- <nav class="sub-nav-list" role="navigation" aria-labelledby="subnav">
         <a class="sub-nav-link is-active" href="#">Jake the Dog</a>
         <a class="sub-nav-link" href="#">Finn the Human</a>
-      </nav>
+      </nav> -->
     </div>
   </div>
 </header>
