--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>VTrans Rail Apps</title>
 
     <!-- Link to favicon -->
-    <link rel="shortcut icon" href="../../assets/img/favicon.ico">
+    <link rel="shortcut icon" href="/img/favicon.gif">
 
     <!-- stylesheets -->
 
