nav collapse work

--- a/index.html
+++ b/index.html
@@ -35,22 +35,81 @@
   <body>
 
 
-<header class="top-nav">
+<!-- <header class="top-nav">
   <div class="grid-container">
-    <div class="vtrans-logo leader-half left"></div>
-    <nav class="top-nav-list pre-1">
-      <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
-      <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
-      <a href="http://vtransmap01.aot.state.vt.us/" class="top-nav-link" target="_blank">VTransMap</a>
-      <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="top-nav-link" target="_blank">VT 511</a>
-      <!-- <a href="#" class="top-nav-link">Community</a> -->
-    </nav>
-    <!-- <nav class="sign-in right">
-      <a href="#" class="btn btn-small btn-clear">Sign Up</a>
-      <a href="#" class="btn btn-small btn-transparent">Sign In</a>
-    </nav> -->
+    <div class="column-24">
+      <div class="tablet-hide">
+        <div class="vtrans-logo leader-half left"></div>
+        <nav class="top-nav-list pre-1" role="navigation">
+          <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
+          <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
+          <a href="http://vtransmap01.aot.state.vt.us/" class="top-nav-link" target="_blank">VTransMap</a>
+          <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="top-nav-link" target="_blank">VT 511</a>
+        </nav>
+      </div>
+      <div class="tablet-show">
+        <a href="/" class="icon-ui-menu top-nav-title js-drawer-toggle" data-drawer="top-nav">Rail Apps</a>
+        <div class="vtrans-logo leader-half left"></div>
+      </div>
   </div>
-</header>
+</header> -->
+
+<header class="top-nav">
+        <a class="skip-to-content" href="#skip-to-content">Skip To Content</a>
+        <div class="grid-container">
+          <div class="column-24">
+            <div class="tablet-hide">
+              <a href="" class="top-nav-title">Calcite Web</a>
+              <nav class="top-nav-list" role="navigation">
+
+
+
+
+                  <a href="type" class="top-nav-link">Type</a>
+
+
+
+                  <a href="grid" class="top-nav-link">Grid</a>
+
+
+
+                  <a href="icons" class="top-nav-link">Icons</a>
+
+
+
+                  <a href="color" class="top-nav-link">Color</a>
+
+
+
+                  <a href="components" class="top-nav-link">Components</a>
+
+
+
+                  <a href="patterns" class="top-nav-link">Patterns</a>
+
+
+
+                  <a href="sass" class="top-nav-link">Sass</a>
+
+
+
+                  <a href="javascript" class="top-nav-link">JavaScript</a>
+
+
+
+                  <a href="page-layouts" class="top-nav-link">Layouts</a>
+
+
+              </nav>
+              <a href="#" class="icon-ui-search js-expand-toggle top-nav-link right" data-expand="search">Search</a>
+            </div>
+
+            <div class="tablet-show">
+              <a href="/" class="icon-ui-menu top-nav-title js-drawer-toggle" data-drawer="top-nav">Calcite Web</a>
+            </div>
+          </div>
+        </div>
+      </header>
 
 <header class="sub-nav" role="banner">
   <div class="grid-container">
@@ -143,6 +202,6 @@
   </div>
 </div>
 
-<script src="node_modules\calcite-web\dist\js\calcite-web.js"></script>
+<script src="node_modules\calcite-web\lib\js\calcite-web.js"></script>
 <script src="node_modules\calcite-web\docs\source\assets\js\all.js"></script>
 </body>
