--- a/index.html
+++ b/index.html
@@ -34,55 +34,49 @@
   </head>
   <body>
     <!-- Drawer -->
-  <div class="drawer drawer-left js-drawer is-active" data-drawer="top-nav" tabindex="0">
+  <div class="drawer drawer-left js-drawer" data-drawer="top-nav" tabindex="0">
     <nav class="drawer-nav" role="navigation">
       <aside class="side-nav">
-        <h2 class="side-nav-title">Calcite Web</h2>
-        <a href="/" class="side-nav-link">Get Started</a>
-        <a href="/" class="side-nav-link">Type</a>
-        <a href="/" class="side-nav-link">Grid</a>
-        <a href="/" class="side-nav-link">Icons</a>
-        <a href="/" class="side-nav-link">Color</a>
-        <a href="/" class="side-nav-link">Components</a>
-        <a href="/" class="side-nav-link">Patterns</a>
-        <a href="/" class="side-nav-link">Sass</a>
-        <a href="/" class="side-nav-link">JavaScript</a>
-        <a href="/" class="side-nav-link">Layouts</a>
+        <h2 class="side-nav-title">VTrans Rail</h2>
+        <a href="http://vtrans.maps.arcgis.com" class="side-nav-link" target="_blank">ArcGIS Online</a>
+        <a href="http://data.vtrans.opendata.arcgis.com/" class="side-nav-link" target="_blank">Open Data Portal</a>
+        <a href="http://vtransmap01.aot.state.vt.us/" class="side-nav-link" target="_blank">VTransMap</a>
+        <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="side-nav-link" target="_blank">VT 511</a>
       </aside>
     </nav>
   </div>
 
+  <header class="top-nav">
+    <div class="grid-container">
+      <div class="column-24">
+        <div class="tablet-hide">
+          <a href="" class="top-nav-title">VTrans Rail</a>
+          <nav class="top-nav-list" role="navigation">
+            <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
+            <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
+            <a href="http://vtransmap01.aot.state.vt.us/" class="top-nav-link" target="_blank">VTransMap</a>
+            <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="top-nav-link" target="_blank">VT 511</a>
+          </nav>
+        </div>
+
+        <div class="tablet-show">
+          <a href="/" class="icon-ui-menu top-nav-title js-drawer-toggle" data-drawer="top-nav">VTrans Rail</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
       <div class="wrapper">
-
-
-<!-- <header class="top-nav">
-  <div class="grid-container">
-    <div class="column-24">
-      <div class="tablet-hide">
-        <div class="vtrans-logo leader-half left"></div>
-        <nav class="top-nav-list pre-1" role="navigation">
-          <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
-          <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
-          <a href="http://vtransmap01.aot.state.vt.us/" class="top-nav-link" target="_blank">VTransMap</a>
-          <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="top-nav-link" target="_blank">VT 511</a>
-        </nav>
-      </div>
-      <div class="tablet-show">
-        <a href="/" class="icon-ui-menu top-nav-title js-drawer-toggle" data-drawer="top-nav">Rail Apps</a>
-        <div class="vtrans-logo leader-half left"></div>
-      </div>
-  </div>
-</header> -->
 
 
 <header class="sub-nav" role="banner">
   <div class="grid-container">
     <div class="column-24">
-      <nav class="breadcrumbs link-white leader-1">
+      <!-- <nav class="breadcrumbs link-white leader-1">
         <a href="http://vtrans.vermont.gov" class="crumb">VTrans</a>
         <a href="http://rail.vermont.gov" class="crumb">Rail</a>
         <a href="http://apps.rail.vermont.gov" class="crumb is-active">Apps</a>
-      </nav>
+      </nav> -->
       <h1 class="sub-nav-title text-white leader-3">Rail App Portal</h1>
       <p class="trailer-4 text-white">
         Welcome to the VTrans rail app portal.
@@ -95,20 +89,11 @@
   </div>
 </header>
 
-  <div class="grid-container">
-    <nav class="banner-dots column-24">
-      <a href="#" class="js-carousel-link link-white" data-slide="1">&bull;</a>
-      <a href="#" class="js-carousel-link link-white" data-slide="2">&bull;</a>
-      <a href="#" class="js-carousel-link link-white" data-slide="3">&bull;</a>
-    </nav>
-  </div>
-
-</section>
 
 <div class="grid-container leader-2">
 
   <div class="column-12">
-    <img src="http://www.esri.com/~/media/Images/Content/homepage/features/uc15-tile.jpg" alt="">
+    <img src="img\tracks-forest.jpg" alt="">
     <h2 class=""><a href="#">UC Early Birds Get the Perks</a></h2>
     <p>Esri UC | July 20 – 24, 2015</p>
   </div>
