--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]>  <html class="ie lt-ie9 ie8"> <![endif]-->
 <!--[if IE 9]>     <html class="ie ie9"> <![endif]-->
-<!--[if !IE]><!--> <html> <!--<![endif]-->
-  <head>
+<!--[if !IE]><!-->
+<html>
+<!--<![endif]-->
 
-    <!-- Set encoding -->
-    <meta charset="utf-8">
+<head>
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+  <!-- Set encoding -->
+  <meta charset="utf-8">
 
-    <!-- Use title from page frontmatter -->
-    <title>VTrans Rail Apps</title>
+  <!-- Always force latest IE rendering engine or request Chrome Frame -->
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 
-    <!-- Link to favicon -->
-    <link rel="shortcut icon" href="/img/favicon.gif">
+  <!-- Use title from page frontmatter -->
+  <title>VTrans Rail Apps</title>
 
-    <!-- stylesheets -->
+  <!-- Link to favicon -->
+  <link rel="shortcut icon" href="/img/favicon.gif">
 
-      <link rel="stylesheet" href="node_modules\calcite-web\dist\css\calcite-web.css">
+  <!-- stylesheets -->
 
-      <!-- Style overrides -->
-      <link rel="stylesheet" href="\css\style.css">
+  <link rel="stylesheet" href="node_modules\calcite-web\dist\css\calcite-web.css">
 
-    <!--[if lt IE 9]>
+  <!-- Style overrides -->
+  <link rel="stylesheet" href="\css\style.css">
+
+  <!--[if lt IE 9]>
       <script src="../../assets/js/libs/selectivizr-min.js"></script>
       <script src="../../assets/js/libs/html5shiv.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 
-  </head>
-  <body>
-    <!-- Drawer -->
+</head>
+
+<body>
+  <!-- Drawer -->
   <div class="drawer drawer-left js-drawer" data-drawer="top-nav" tabindex="0">
     <nav class="drawer-nav" role="navigation">
       <aside class="side-nav">
@@ -66,94 +70,95 @@
     </div>
   </header>
 
-      <div class="wrapper">
+  <div class="wrapper">
 
 
-<header class="sub-nav" role="banner">
-  <div class="grid-container">
-    <div class="column-24">
-      <!-- <nav class="breadcrumbs link-white leader-1">
+    <header class="sub-nav" role="banner">
+      <div class="grid-container">
+        <div class="column-24">
+          <!-- <nav class="breadcrumbs link-white leader-1">
         <a href="http://vtrans.vermont.gov" class="crumb">VTrans</a>
         <a href="http://rail.vermont.gov" class="crumb">Rail</a>
         <a href="http://apps.rail.vermont.gov" class="crumb is-active">Apps</a>
       </nav> -->
-      <h1 class="sub-nav-title text-white leader-3">Rail App Portal</h1>
-      <p class="trailer-4 text-white">
-        Welcome to the VTrans rail app portal.
-      </p>
-      <!-- <nav class="sub-nav-list" role="navigation" aria-labelledby="subnav">
+          <h1 class="sub-nav-title text-white leader-3">Rail App Portal</h1>
+          <p class="trailer-4 text-white">
+            Welcome to the VTrans rail app portal.
+          </p>
+          <!-- <nav class="sub-nav-list" role="navigation" aria-labelledby="subnav">
         <a class="sub-nav-link is-active" href="#">Jake the Dog</a>
         <a class="sub-nav-link" href="#">Finn the Human</a>
       </nav> -->
+        </div>
+      </div>
+    </header>
+
+
+    <div class="grid-container leader-2">
+
+      <div class="column-12">
+        <img src="img\tracks-forest.jpg" alt="">
+        <h2 class=""><a href="#">UC Early Birds Get the Perks</a></h2>
+        <p>Esri UC | July 20 – 24, 2015</p>
+      </div>
+
+      <div class="column-12">
+        <img src="http://www.esri.com/~/media/Images/Content/homepage/features/go-green.jpg" alt="">
+        <h2 class=""><a href="#">Go Green in 2015</a></h2>
+        <p>Smart maps help organizations fight climate change</p>
+      </div>
+
     </div>
-  </div>
-</header>
 
-
-<div class="grid-container leader-2">
-
-  <div class="column-12">
-    <img src="img\tracks-forest.jpg" alt="">
-    <h2 class=""><a href="#">UC Early Birds Get the Perks</a></h2>
-    <p>Esri UC | July 20 – 24, 2015</p>
-  </div>
-
-  <div class="column-12">
-    <img src="http://www.esri.com/~/media/Images/Content/homepage/features/go-green.jpg" alt="">
-    <h2 class=""><a href="#">Go Green in 2015</a></h2>
-    <p>Smart maps help organizations fight climate change</p>
-  </div>
-
-</div>
-
-<div class="panel panel-light-blue">
-  <div class="grid-container leader-1">
-    <div class="column-8">
-      <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geonet.jpg" alt="">
-      <h4 class=""><a href="#">What is GeoNet?</a></h4>
-      <p>A social and business site for geogeeks! <a href="#">Join the conversation</a></p>
-    </div>
-    <div class="column-8">
-      <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geoplanner-2.jpg" alt="">
-      <h4 class=""><a href="#">Your App for Geodesign</a></h4>
-      <p>GeoPlanner for ArcGIS simplifies your planning workflow. <a href="#">See how</a></p>
-    </div>
-    <div class="column-8">
-      <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/opendata.jpg" alt="">
-      <h4 class=""><a href="#">Turn on Open Data</a></h4>
-      <p>Included as part of ArcGIS Online. <a href="#">Get started today</a></p>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-blue text-white link-white">
-  <div class="grid-container trailer-1">
-    <div class="column-8">
-    <h3 class="">ArcGIS Platform</h3>
-    <ul class="font-size--1">
-      <li><a href="#" class="link-white">ArcGIS Online</a></li>
-      <li><a href="#" class="link-white">ArcGIS for Desktop</a></li>
-      <li><a href="#" class="link-white">ArcGIS for Server</a></li>
-      <li><a href="#" class="link-white">ArcGIS for Developers</a></li>
-      <li><a href="#" class="link-white">ArcGIS Solutions</a></li>
-      <li><a href="#" class="link-white">ArcGIS Marketplace</a></li>
-    </ul>
-    </div>
-    <div class="column-16">
-      <h3 class="">Map Gallery</h3>
-      <div class="panel-dark-blue  clearfix">
-        <img src="http://www.esri.com/~/media/Images/Content/homepage/featured-maps/fast-co.jpg" class="left gutter-right-1 gutter-left-1 leader-1 trailer-1" alt="">
-        <h6 class="padding-leader-1 trailer-half font-size--1">Mapped: Ecosystems of the World</h6>
-        <p class="font-size--2 trailer-half">Fast Company explores how climate change is affecting the planet through Esri maps.</p>
-        <a href="#" class="link-white btn-arrow font-size--2 leader-half">More maps</a>
+    <div class="panel panel-light-blue">
+      <div class="grid-container leader-1">
+        <div class="column-8">
+          <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geonet.jpg" alt="">
+          <h4 class=""><a href="#">What is GeoNet?</a></h4>
+          <p>A social and business site for geogeeks! <a href="#">Join the conversation</a></p>
+        </div>
+        <div class="column-8">
+          <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geoplanner-2.jpg" alt="">
+          <h4 class=""><a href="#">Your App for Geodesign</a></h4>
+          <p>GeoPlanner for ArcGIS simplifies your planning workflow. <a href="#">See how</a></p>
+        </div>
+        <div class="column-8">
+          <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/opendata.jpg" alt="">
+          <h4 class=""><a href="#">Turn on Open Data</a></h4>
+          <p>Included as part of ArcGIS Online. <a href="#">Get started today</a></p>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-  <script src="node_modules\calcite-web\lib\js\calcite-web.js"></script>
-  <script>
-     calcite.init()
-</script>
-</div> <!-- end wrapper -->
+    <div class="panel panel-blue text-white link-white">
+      <div class="grid-container trailer-1">
+        <div class="column-8">
+          <h3 class="">ArcGIS Platform</h3>
+          <ul class="font-size--1">
+            <li><a href="#" class="link-white">ArcGIS Online</a></li>
+            <li><a href="#" class="link-white">ArcGIS for Desktop</a></li>
+            <li><a href="#" class="link-white">ArcGIS for Server</a></li>
+            <li><a href="#" class="link-white">ArcGIS for Developers</a></li>
+            <li><a href="#" class="link-white">ArcGIS Solutions</a></li>
+            <li><a href="#" class="link-white">ArcGIS Marketplace</a></li>
+          </ul>
+        </div>
+        <div class="column-16">
+          <h3 class="">Map Gallery</h3>
+          <div class="panel-dark-blue  clearfix">
+            <img src="http://www.esri.com/~/media/Images/Content/homepage/featured-maps/fast-co.jpg" class="left gutter-right-1 gutter-left-1 leader-1 trailer-1" alt="">
+            <h6 class="padding-leader-1 trailer-half font-size--1">Mapped: Ecosystems of the World</h6>
+            <p class="font-size--2 trailer-half">Fast Company explores how climate change is affecting the planet through Esri maps.</p>
+            <a href="#" class="link-white btn-arrow font-size--2 leader-half">More maps</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="node_modules\calcite-web\lib\js\calcite-web.js"></script>
+    <script>
+      calcite.init()
+    </script>
+  </div>
+  <!-- end wrapper -->
 </body>
