copy and links for apps and comment out un-needed

--- a/index.html
+++ b/index.html
@@ -97,20 +97,27 @@
     <div class="grid-container leader-2">
 
       <div class="column-12">
-        <img src="img\tracks-forest.jpg" alt="">
-        <h2 class=""><a href="#">UC Early Birds Get the Perks</a></h2>
-        <p>Esri UC | July 20 – 24, 2015</p>
+        <a href="http://apps.rail.vermont.gov/crossing-inspection/" target="_blank"><img src="img\xing-review.png" alt=""></a>
+        <h2 class=""><a href="http://apps.rail.vermont.gov/crossing-inspection/" target="_blank">Crossing Inspection Reviewer App</a></h2>
+        <p>
+          Use this powerful app to review the 2015 grade crossing inspection results.
+          Search for a specific crossing, view related photos, and see all attribute
+          data in an easy-to-read form format.
+        </p>
       </div>
 
       <div class="column-12">
-        <img src="http://www.esri.com/~/media/Images/Content/homepage/features/go-green.jpg" alt="">
-        <h2 class=""><a href="#">Go Green in 2015</a></h2>
-        <p>Smart maps help organizations fight climate change</p>
+        <a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=ff0fe051ac8d40038e95730063802b9c"><img src="img\asset-map.png" alt=""></a>
+        <h2 class=""><a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=ff0fe051ac8d40038e95730063802b9c">Rail Asset Inventory</a></h2>
+        <p>
+          This map includes the best available data regarding rail lines, crossings, bridges, culverts, and switches.
+          It is continually updated as more information becomes available.
+        </p>
       </div>
 
     </div>
 
-    <div class="panel panel-light-blue">
+    <!-- <div class="panel panel-light-blue">
       <div class="grid-container leader-1">
         <div class="column-8">
           <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geonet.jpg" alt="">
@@ -153,7 +160,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <script src="node_modules\calcite-web\lib\js\calcite-web.js"></script>
     <script>
