--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
       </nav> -->
           <h1 class="sub-nav-title text-white leader-3">Rail App Portal</h1>
           <p class="trailer-4 text-white">
-            Welcome to the VTrans rail app portal.
+            Welcome to the VTrans rail app portal. <br>
+            The gallery below contains our most popular interactive map apps. <br>
+            They are used internally to visualize our data, track our assets, <br>
+            improve our planning, and help us achieve the agency's mission and vision.
           </p>
           <!-- <nav class="sub-nav-list" role="navigation" aria-labelledby="subnav">
         <a class="sub-nav-link is-active" href="#">Jake the Dog</a>
@@ -136,31 +139,33 @@
         </div>
       </div>
     </div>
-
+-->
     <div class="panel panel-blue text-white link-white">
       <div class="grid-container trailer-1">
         <div class="column-8">
-          <h3 class="">ArcGIS Platform</h3>
+          <h3 class="">VTrans GIS Platform</h3>
           <ul class="font-size--1">
-            <li><a href="#" class="link-white">ArcGIS Online</a></li>
-            <li><a href="#" class="link-white">ArcGIS for Desktop</a></li>
-            <li><a href="#" class="link-white">ArcGIS for Server</a></li>
-            <li><a href="#" class="link-white">ArcGIS for Developers</a></li>
-            <li><a href="#" class="link-white">ArcGIS Solutions</a></li>
-            <li><a href="#" class="link-white">ArcGIS Marketplace</a></li>
+            <li><a href="http://vtrans.maps.arcgis.com" class="link-white" target="_blank">ArcGIS Online</a></li>
+            <li><a href="http://data.vtrans.opendata.arcgis.com/" class="link-white" target="_blank">Open Data Portal</a></li>
+            <li><a href="http://vtransmap01.aot.state.vt.us/" class="link-white" target="_blank">VTransMap</a></li>
+            <li><a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="link-white" target="_blank">VT 511</a></li>
           </ul>
         </div>
         <div class="column-16">
-          <h3 class="">Map Gallery</h3>
+          <h3 class="">VTransparency</h3>
           <div class="panel-dark-blue  clearfix">
-            <img src="http://www.esri.com/~/media/Images/Content/homepage/featured-maps/fast-co.jpg" class="left gutter-right-1 gutter-left-1 leader-1 trailer-1" alt="">
-            <h6 class="padding-leader-1 trailer-half font-size--1">Mapped: Ecosystems of the World</h6>
-            <p class="font-size--2 trailer-half">Fast Company explores how climate change is affecting the planet through Esri maps.</p>
-            <a href="#" class="link-white btn-arrow font-size--2 leader-half">More maps</a>
+            <div class="column-7 left gutter-right-1 gutter-left-1 leader-1 trailer-1">
+              <a href="http://vtransparency.vermont.gov" class="" target="_blank"><img src="img\vtransparency.jpg" class="" alt=""></a>
+            </div>
+            <div class="column-8">
+              <h6 class="padding-leader-1 trailer-half font-size--1">VTrans Open Map Portal</h6>
+              <p class="font-size--2 trailer-half">Answers to our most commonnly asked questions - with maps!</p>
+              <a href="http://vtransparency.vermont.gov" class="link-white btn-arrow font-size--2 leader-half" target="_blank">Visit the portal</a>
+            </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <script src="node_modules\calcite-web\lib\js\calcite-web.js"></script>
     <script>
