--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <title>VTrans Rail Apps</title>
 
   <!-- Link to favicon -->
-  <link rel="shortcut icon" href="/img/favicon.gif">
+  <link rel="shortcut icon" href="\img\favicon.gif">
 
   <!-- stylesheets -->
 
-  <link rel="stylesheet" href="node_modules\calcite-web\dist\css\calcite-web.css">
+  <link rel="stylesheet" href="\dist\css\calcite-web.min.css">
 
   <!-- Style overrides -->
   <link rel="stylesheet" href="\css\style.css">
@@ -167,7 +167,7 @@
       </div>
     </div>
 
-    <script src="node_modules\calcite-web\lib\js\calcite-web.js"></script>
+    <script src="dist/js/calcite-web.min.js"></script>
     <script>
       calcite.init()
     </script>
