--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <title>VTrans Rail Apps</title>
 
   <!-- Link to favicon -->
-  <link rel="shortcut icon" href="\img\favicon.gif">
+  <link rel="shortcut icon" href="/img/favicon.gif">
 
   <!-- stylesheets -->
 
-  <link rel="stylesheet" href="\dist\css\calcite-web.min.css">
+  <link rel="stylesheet" href="/dist/css/calcite-web.min.css">
 
   <!-- Style overrides -->
-  <link rel="stylesheet" href="\css\style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!--[if lt IE 9]>
       <script src="../../assets/js/libs/selectivizr-min.js"></script>
@@ -100,7 +100,7 @@
     <div class="grid-container leader-2">
 
       <div class="column-12">
-        <a href="http://apps.rail.vermont.gov/crossing-inspection/" target="_blank"><img src="img\xing-review.png" alt=""></a>
+        <a href="http://apps.rail.vermont.gov/crossing-inspection/" target="_blank"><img src="img/xing-review.png" alt=""></a>
         <h2 class=""><a href="http://apps.rail.vermont.gov/crossing-inspection/" target="_blank">Crossing Inspection Reviewer App</a></h2>
         <p>
           Use this powerful app to review the 2015 grade crossing inspection results.
@@ -110,7 +110,7 @@
       </div>
 
       <div class="column-12">
-        <a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=ff0fe051ac8d40038e95730063802b9c"><img src="img\asset-map.png" alt=""></a>
+        <a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=ff0fe051ac8d40038e95730063802b9c"><img src="img/asset-map.png" alt=""></a>
         <h2 class=""><a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=ff0fe051ac8d40038e95730063802b9c">Rail Asset Inventory</a></h2>
         <p>
           This map includes the best available data regarding rail lines, crossings, bridges, culverts, and switches.
@@ -155,7 +155,7 @@
           <h3 class="">VTransparency</h3>
           <div class="panel-dark-blue  clearfix">
             <div class="column-7 left gutter-right-1 gutter-left-1 leader-1 trailer-1">
-              <a href="http://vtransparency.vermont.gov" class="" target="_blank"><img src="img\vtransparency.jpg" class="" alt=""></a>
+              <a href="http://vtransparency.vermont.gov" class="" target="_blank"><img src="img/vtransparency.jpg" class="" alt=""></a>
             </div>
             <div class="column-8">
               <h6 class="padding-leader-1 trailer-half font-size--1">VTrans Open Map Portal</h6>
@@ -167,7 +167,7 @@
       </div>
     </div>
 
-    <script src="dist/js/calcite-web.min.js"></script>
+    <script src="/dist/js/calcite-web.min.js"></script>
     <script>
       calcite.init()
     </script>
