how do you even slash

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <title>VTrans Rail Apps</title>
 
   <!-- Link to favicon -->
-  <link rel="shortcut icon" href="/img/favicon.gif">
+  <link rel="shortcut icon" href="img/favicon.gif">
 
   <!-- stylesheets -->
 
-  <link rel="stylesheet" href="/dist/css/calcite-web.min.css">
+  <link rel="stylesheet" href="dist/css/calcite-web.min.css">
 
   <!-- Style overrides -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!--[if lt IE 9]>
       <script src="../../assets/js/libs/selectivizr-min.js"></script>
@@ -167,7 +167,7 @@
       </div>
     </div>
 
-    <script src="/dist/js/calcite-web.min.js"></script>
+    <script src="dist/js/calcite-web.min.js"></script>
     <script>
       calcite.init()
     </script>
